<resources>
    <string name="app_name">Budget</string>
    <!--Reused text-->
    <string name="tvTitleText">This is the budget app</string>
    <string name="tvPassword">Type password below</string>
    <string name="hintPassword">password</string>
    <string name="tvIncome">Add/View Income</string>
    <string name="tvExpenses">Add/View Expenses</string>
    <string name="tvBudgetText">Click here to see budget</string>

    <!--String Resources for the Home fragment-->
    <string name="tvGoalText">Click here to view/update goal</string>


    <!--String resources for the start up fragment-->
    <string name="tvInfo">This is a budget app to help you manage you money</string>
    <string name="tvRegisterNav">Click here to register for our budget app</string>
    <string name="tvLoginNav">Click here to login for out budget app</string>

    <!--String Resources for the register fragment-->
    <string name="tvRegisterTitle">Type name and you a unique password below</string>
    <string name="tvName">Type Name here</string>
    <string name="tvRegister">Register</string>

    <!--String resources for the login fragment-->
    <string name="tvTitleLogin">Type below your name and password to login</string>
    <string name="tvName_Email">Type Name here</string>
    <string name="tvLogin">Login</string>
    <string name="tvPasswordInput"></string>

    <!--String resources for the budget Fragment-->
    <string name="tvTitleBudget">Here you can see your budget and also your percentage towards your goal</string>
    <string name="tvBudget">your budget is below</string>
    <string name="tvGoal">Your goal is below</string>
    <string name="tvHome">Click here to go to home</string>
    <string name="tvGoalNav">Click here to go to goals</string>

    <!--String resources for the Goal fragment-->
    <string name="tvGoalTitle">Here you can update your goals</string>
    <string name="tvTextGoal">See goal below</string>
    <string name="tvNewGoal">Type new Goal here</string>
    <string name="tvSetGoal">Apply new goal</string>

    <!--String resources for the income fragment-->
    <string name="tvIncomeTitle">Here is where you can add new income to add more to your budget</string>
    <string name="tvIncomeAmount">Type here the amount earned</string>
    <string name="tvIncomeDate">Type here the date earned (dd/MM/yyyy)</string>
    <string name="tvIncomeDescription">Type here a description for the income if wanted</string>
    <string name="tvSetIncome">Add Income</string>
    <string name="tvIncomeView">Click here to see incomes</string>

    <!--String Resources for the expenses fragment-->
    <string name="tvExpenseTitle">Here is where you can add new expense to take away from your budget</string>
    <string name="tvExpenseAmount">Type here the amount spent</string>
    <string name="tvExpenseDate">Type here the date spent</string>
    <string name="tvExpenseDescription">Type here a description for the expense if wanted</string>
    <string name="tvSetExpense">Add Expense</string>
    <string name="tvExpensesView">Click here to see expenses</string>

    <!--String resources for the income view fragment-->
    <string name="tvIncomeViewTitle">See below all the income with dates and description if added</string>
    <string name="tvRefreshExp">Refresh list</string>

    <!--String resources for the expenses view fragment-->
    <string name="tvExpensesViewTitle">See below all the expenses with dates and description if added</string>
    <string name="tvRefreshInc">Refresh list</string>

    <!--error string resources and user notifications-->
    <string name="tvErrorDate">not a valid date</string>
    <string name="tvErrorAmount">Amount must be a number</string>
    <string name="tvUserLogin">Login Successful</string>
    <string name="tvUsernameError">Username and password must not contain spaces</string>
    <string name="tvInputError">Must have input in all fields</string>
    <string name="tvRegisterComplete">Account made</string>
    <string name="tvNoUser">User doesnt exist or password wrong</string>
</resources>