<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IncomeFragment">

    <EditText
        android:id="@+id/InputIncDescription"
        android:layout_width="412dp"
        android:layout_height="99dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/tvIncomeDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputIncDate" />

    <EditText
        android:id="@+id/InputIncDate"
        android:layout_width="333dp"
        android:layout_height="51dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/tvIncomeDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputIncome" />

    <TextView
        android:id="@+id/IncomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvIncomeTitle"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.157" />

    <EditText
        android:id="@+id/InputIncome"
        android:layout_width="328dp"
        android:layout_height="48dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:text="@string/tvIncomeAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IncomeTitle" />

    <Button
        android:id="@+id/BtnAddIncome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tvSetIncome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputIncDescription" />

    <Button
        android:id="@+id/btnBudgetNavInc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvBudgetText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnAddIncome"
        app:layout_constraintVertical_bias="0.836" />

    <Button
        android:id="@+id/BtnIncNavIncView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvIncomeView"
        app:layout_constraintBottom_toTopOf="@+id/btnBudgetNavInc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BtnAddIncome" />
</androidx.constraintlayout.widget.ConstraintLayout>